@@ -1,3 +1,13 @@
+2008-10-29  Tambet Ingo  <tambet@gmail.com>
+
+	* src/connection-editor/nm-connection-list.c
+	src/connection-editor/page-vpn.c
+	src/connection-editor/vpn-helpers.c
+	src/gconf-helpers/gconf-upgrade.c
+	src/gconf-helpers/nma-gconf-connection.c
+	src/vpn-password-dialog.c
+		- Use VPN setting accessors.
+
 2008-10-28  Dan Williams  <dcbw@redhat.com>
 
 	Patch from Tambet Ingo <tambet@gmail.com>
